--- a/src/template.html
+++ b/src/template.html
@@ -5,39 +5,39 @@
   <title>Chat UI</title>
   <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 
-<body class="bg-gray-200 flex items-center justify-center h-screen p-5">
-  <div class="bg-white flex flex-col rounded-lg shadow-lg p-5" style="width: 100%; height: 100%">
-    <div id="chat"
-      class="h-full border-b-2 border-gray-200 h-64 overflow-auto mb-4 p-4 bg-gray-50 rounded-lg"></div>
-    <div class="flex flex-col">
-      <div class="flex">
-        <input id="userInput" type="text" placeholder="Type your message here..."
-          class="flex-grow mr-4 rounded-lg border-2 p-2 h-10">
-        <button id="sendButton" class="bg-blue-500 text-white rounded-lg px-4 py-2">Send</button>
+<div class="bg-white flex flex-col rounded-lg shadow-lg p-5 h-screen">
+  <div id="chat"
+    class="h-full border-b-2 border-gray-200 h-64 overflow-auto mb-4 p-4 bg-gray-50 rounded-lg flex flex-col gap-2">
+  </div>
+  <div class="flex flex-col">
+    <div class="flex">
+      <input id="userInput" type="text" placeholder="Type your message here..."
+        class="flex-grow mr-4 rounded-lg border-2 p-2 h-10">
+      <button id="sendButton" class="bg-blue-500 text-white rounded-lg px-4 py-2">Send</button>
+    </div>
+    <div class="flex flex-row gap-10 mt-4">
+      <div class="flex flex-col w-full">
+        <p class="text-blue-500">System Prompt</p>
+        <input id="systemPrompt" type="text" value="You are an assistant."
+          placeholder="Enter your system prompt here..." class="w-full rounded-lg border-2 p-2">
       </div>
-      <div class="flex flex-row gap-10 mt-4">
-        <div class="flex flex-col w-full">
-          <p class="text-blue-500">System Prompt</p>
-          <input id="systemPrompt" type="text" value="You are an assistant."
-            placeholder="Enter your system prompt here..." class="w-full rounded-lg border-2 p-2">
-        </div>
-        <div class="flex flex-col w-full">
-          <p class="text-blue-500">Max Tokens</p>
-          <input id="maxTokens" type="number" value="256" placeholder="Enter your max tokens here..."
-            class="w-full rounded-lg border-2 p-2">
-        </div>
-        <div class="flex flex-col w-full">
-          <p class="text-blue-500">Auth Token</p>
-          <input id="authToken" type="password" value=""
-            placeholder="Enter your Authorization token here..." class="w-full rounded-lg border-2 p-2">
-        </div>
+      <div class="flex flex-col w-full">
+        <p class="text-blue-500">Max Tokens</p>
+        <input id="maxTokens" type="number" value="256" placeholder="Enter your max tokens here..."
+          class="w-full rounded-lg border-2 p-2">
+      </div>
+      <div class="flex flex-col w-full">
+        <p class="text-blue-500">Auth Token</p>
+        <input id="authToken" type="password" value="" placeholder="Enter your Authorization token here..."
+          class="w-full rounded-lg border-2 p-2">
       </div>
     </div>
   </div>
-
-  <script>
+  <script type="module">
+    import { marked } from "https://cdn.jsdelivr.net/npm/marked/lib/marked.esm.js";
     const chatDiv = document.getElementById('chat');
     const userInput = document.getElementById('userInput');
     const authToken = document.getElementById('authToken');
@@ -56,7 +56,7 @@
     authToken.focus();
     userInput.disabled = true;
     authToken.addEventListener('keyup', (event) => {
-        userInput.disabled = false;
+      userInput.disabled = false;
     });
 
     userInput.addEventListener('keyup', (event) => {
@@ -82,12 +82,20 @@
     sendButton.addEventListener('click', async () => {
       const userMessage = userInput.value;
       userInput.value = '';
-      chatDiv.innerHTML += `<p class="text-blue-500">You: ${userMessage}</p>`;
+      // chatDiv.innerHTML += `<p class="text-blue-500">You: ${userMessage}</p>`;
+      chatDiv.innerHTML += `<div class="flex flex-row gap-4">
+        <div class="flex-shrink-0">
+          <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></g></svg>
+        </div>
+        <div class="bg-blue-500 text-white rounded-lg px-4 py-2">${userMessage}</div>
+      </div>`;
       chatDiv.scrollTop = chatDiv.scrollHeight;
       history.push({
         "role": "user",
         "content": userMessage,
       });
+      const controller = new AbortController();
+
       const response = await fetch('/api/v1/chat/completions', {
         method: 'POST',
         headers: {
@@ -98,10 +106,11 @@
           messages: history,
           stream: true,
           max_tokens: maxTokens.value || 256,
-        })
+        }),
+        signal: controller.signal,
       });
 
-      
+
       const lastChatBubbleId = document.createElement('div');
       lastChatBubbleId.id = 'currentResponse';
       chatDiv.appendChild(lastChatBubbleId);
@@ -115,37 +124,58 @@
       }
 
       if (!response.body) return;
-      const reader = response.body
-        .pipeThrough(new TextDecoderStream())
-        .getReader();
+      const decoder = new TextDecoder();
+
+      const reader = response.body.getReader();
 
       let result = '';
       while (true) {
-        var { value, done } = await reader.read();
+        const { value, done } = await reader.read();
         if (done) break;
-        console.log(value.trim());
 
-        const data = value.slice(value.indexOf(':') + 2).trim();
-        if ("[DONE]" === data) break;
+        const decodedChunk = decoder.decode(value);
 
-        try {
-          const parsedData = JSON.parse(data);
-          result += parsedData.response;
-          const currentResponse = document.getElementById('currentResponse');
+        const lines = decodedChunk
+          .split("\n")
+          .map((line) => line.replace("data: ", ""))
+          .filter((line) => line.length > 0)
+          .filter((line) => line !== "[DONE]");
 
-          currentResponse.innerHTML = `<p class="text-green-500">Bot: ${result}</p>`;
-          chatDiv.scrollTop = chatDiv.scrollHeight;
-        } catch (e) {
+        for (const line of lines) {
+          console.log("Parsing line:", line);
+          try {
+            const parsedLine = JSON.parse(line);
+            console.log(parsedLine);
+
+            if (parsedLine.response) {
+              result += parsedLine.response;
+            }
+          } catch (error) {
+            console.error("Error parsing line:", error);
+          }
         }
+
+        const formattedResult = marked(result);
+        const currentResponse = document.getElementById('currentResponse');
+        currentResponse.innerHTML = `<div class="flex flex-row gap-4">
+          <div class="flex-shrink-0">
+            <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M12 8V4H8"/><rect width="16" height="12" x="4" y="8" rx="2"/><path d="M2 14h2m16 0h2m-7-1v2m-6-2v2"/></g></svg>
+          </div>
+          <div class="bg-green-500 text-white rounded-lg px-4 py-2">${formattedResult}</div>
+        </div>`;
+        chatDiv.scrollTop = chatDiv.scrollHeight;
+
       }
+
       history.push({
         "role": "assistant",
         "content": result,
       });
+
       lastChatBubbleId.id = '';
 
     });
   </script>
-</body>
+  </body>
 
 </html>
